--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>13c494af-ebaf-40d2-962d-b9677e969611</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Naveen's Creative Canvas</title>
+    <meta
+      name="description"
+      content="Naveen's Portfolio for video editor and motion designer"
+    />
+    <meta name="author" content="Naveen" />
 
-    <meta property="og:title" content="13c494af-ebaf-40d2-962d-b9677e969611" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:title" content="Naveen's Creative Canvas" />
+    <meta
+      property="og:description"
+      content="Naveen's Portfolio for video editor and motion designer"
+    />
+    <meta property="og:type" content="Portfolio Website" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@naveen_engineer" />
+    <meta name="twitter:image" content="" />
   </head>
 
   <body>
